<resources>
  <string name="app_name">Playground</string>

  <string name="choose_user">Choose user</string>
  <string name="no_users">none :(</string>
  <string name="first_name">First name</string>
  <string name="last_name">Last name</string>
  <string name="nick">Nick</string>
  <string name="add_user">Add user</string>
  <string name="save">Save</string>
  <string name="error_nick_exists">Specified nick already exists</string>
  <string name="generic_welcome_message">Welcome</string>
  <string name="welcome_message">Welcome %1s</string>
  <string name="play">Play</string>
  <string name="leaderboard">Leaderboard</string>
  <string name="settings">Settings</string>
  <string name="start_game">Start game</string>
  <string name="your_result">Your result:</string>
  <string name="score">%1$d/%2$d</string>
  <string name="rank_label">#%1$d</string>
  <string name="games_count_label">(%1$d)</string>
  <string name="logout">logout</string>
  <string name="open_source_licenses">Open Source Licenses</string>
  <string name="edit_profile">Edit profile</string>
</resources>
