<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

  <android.support.design.widget.TextInputLayout
      android:id="@+id/firstNameLayout"
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:layout_margin="10dp"
      android:hint="@string/first_name"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/lastNameLayout"
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:layout_below="@id/firstNameLayout"
      android:layout_margin="10dp"
      android:hint="@string/last_name"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/nickLayout"
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:layout_below="@id/lastNameLayout"
      android:layout_margin="10dp"
      android:hint="@string/nick"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/nickEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        />

  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/confirmButton"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_alignParentBottom="true"
      android:layout_margin="16dp"
      android:filterTouchesWhenObscured="true"
      android:text="@string/save"
      />

</RelativeLayout>
